# kesko

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  pg.py  requirements.txt  rust-toolchain.toml
.github/workflows/: build-wheels.sh  build_pykesko.yml  ci.yml  release.yml  rust.yml
core/: Cargo.toml
core/src/: camera.rs  lib.rs  orbit_camera.rs  plugins.rs
crates/kesko_core/: Cargo.toml
crates/kesko_core/src/: bundle.rs  controller.rs  cursor_tracking.rs  event.rs  interaction.rs  lib.rs  models.rs  orbit_camera.rs  plugins.rs  shape.rs  transform.rs  ui.rs
crates/kesko_core/src/diagnostic/: event.rs
crates/kesko_core/src/interaction/: groups.rs  multibody_selection.rs  vertical_marker.rs
crates/kesko_core/src/models/: arena.rs  car.rs  humanoid.rs  snake.rs  sphere.rs  spider.rs  wheely.rs
crates/kesko_core/src/plugins/: core.rs  main_camera.rs  physics.rs
crates/kesko_core/src/ui/: fps_component.rs  main_menu.rs  multibody_component.rs  spawn_component.rs
crates/kesko_models/: Cargo.toml
crates/kesko_models/src/: arena.rs  car.rs  humanoid.rs  lib.rs  plane.rs  snake.rs  sphere.rs  spider.rs  wheely.rs
crates/kesko_physics/: Cargo.toml
crates/kesko_physics/src/: collider.rs  conversions.rs  event.rs  force.rs  gravity.rs  impulse.rs  joint.rs  lib.rs  mass.rs  multibody.rs  rapier_extern.rs  rigid_body.rs
crates/kesko_physics/src/event/: collision.rs  spawn.rs
crates/kesko_physics/src/joint/: fixed.rs  prismatic.rs  revolute.rs  spherical.rs
crates/kesko_plugins/: Cargo.toml
crates/kesko_plugins/src/: core.rs  lib.rs  main_camera.rs  physics.rs
crates/kesko_python/: Cargo.toml  sanity_check.py  test_model.py  train_ppo.py
crates/kesko_python/kesko/: __init__.py  kesko.py  utils.py
crates/kesko_python/kesko/backend/: __init__.py  backend.py  bindings.py
crates/kesko_python/kesko/envs/: spider.py
crates/kesko_python/kesko/protocol/: commands.py  request.py  response.py
crates/kesko_python/src/: lib.rs
crates/kesko_ui/: Cargo.toml
crates/kesko_ui/src/: about.rs  fps_component.rs  lib.rs  main_menu.rs  multibody_component.rs  spawn_component.rs
docs/: dev.md  notes.md  road_map.excalidraw  systems_diagram.drawio
examples/: car.rs  headless_render.rs  joints.rs  playground.rs  spider.rs  test.rs
kesko/: Cargo.toml  index.html  rust-toolchain.toml
kesko/crates/kesko_core/: Cargo.toml
kesko/crates/kesko_core/src/: bundle.rs  controller.rs  cursor_tracking.rs  event.rs  lib.rs  orbit_camera.rs  shape.rs
kesko/crates/kesko_core/src/interaction/: multibody_selection.rs  vertical_marker.rs
kesko/crates/kesko_diagnostic/: Cargo.toml
kesko/crates/kesko_diagnostic/src/: event.rs  fps.rs  lib.rs
kesko/crates/kesko_models/: Cargo.toml
kesko/crates/kesko_models/src/: arena.rs  car.rs  cube.rs  gltf_model.rs  humanoid.rs  lib.rs  plane.rs  snake.rs  sphere.rs  spider.rs  urdf_model.rs  wheely.rs
kesko/crates/kesko_object_interaction/: Cargo.toml
kesko/crates/kesko_object_interaction/src/: event.rs  interaction.rs  lib.rs  material.rs
kesko/crates/kesko_physics/: Cargo.toml
kesko/crates/kesko_physics/src/: collider.rs  event.rs  force.rs  gravity.rs  impulse.rs  joint.rs  lib.rs  mass.rs  multibody.rs  rapier_extern.rs  rigid_body.rs
kesko/crates/kesko_physics/src/event/: collision.rs  spawn.rs
kesko/crates/kesko_physics/src/joint/: fixed.rs  prismatic.rs  revolute.rs
kesko/crates/kesko_plugins/: Cargo.toml
kesko/crates/kesko_plugins/src/: lib.rs  main_camera.rs  physics.rs
kesko/crates/kesko_raycast/: Cargo.toml
kesko/crates/kesko_raycast/examples/: screenspace_cast.rs
kesko/crates/kesko_raycast/src/: debug.rs  intersect.rs  lib.rs  ray.rs
kesko/crates/kesko_tcp/: Cargo.toml
kesko/crates/kesko_tcp/src/: lib.rs  request.rs  response.rs
kesko/crates/kesko_types/: Cargo.toml
kesko/crates/kesko_types/src/: resource.rs
kesko/crates/kesko_ui/: Cargo.toml
kesko/crates/kesko_ui/src/: about.rs  fps_component.rs  lib.rs  main_menu.rs  multibody_component.rs  spawn_component.rs
kesko/crates/kesko_urdf/: Cargo.toml  build.rs
kesko/crates/kesko_urdf/definitions/: urdf.fbs
kesko/crates/kesko_urdf/examples/: basic.rs
kesko/crates/kesko_urdf/src/: joint.rs  lib.rs  link.rs  urdf_asset_loader.rs  urdf_generated.rs  urdf_model.rs  urdf_plugin.rs
kesko/crates/kesko_urdf/tests/: test.rs
kesko/crates/placeholder_box/: Cargo.toml  build.rs
kesko/crates/placeholder_box/definitions/: clear.fbs  placeholder_box.fbs  spawn.fbs
kesko/crates/placeholder_box/src/: clear_generated.rs  lib.rs  placeholder_box_generated.rs  spawn_generated.rs
kesko/crates/renet_transport/: Cargo.toml
kesko/crates/renet_transport/src/: lib.rs  main.rs  renet_client_plugin.rs  renet_server_worker.rs
kesko/crates/sdf_model_loader/: Cargo.toml  build.rs
kesko/crates/sdf_model_loader/definitions/: spawn.fbs
kesko/crates/sdf_model_loader/src/: lib.rs  sdf_asset_loader.rs  sdf_model.rs  sdf_plugin.rs  spawn_generated.rs
kesko/examples/: car.rs  headless_render.rs  joints.rs  playground.rs
kesko/src/: lib.rs  main.rs
nora_physics/: Cargo.toml
pykesko/: .flake8  Cargo.toml  README.md  build.rs  pyproject.toml  rust-toolchain.toml
pykesko/examples/: assets.py  bindings_pg.py  list_wheel_files.py  placeholder_box.py  profiling.py  sanity_check.py  sdf_loader.py  test_model.py  train_ppo.py
pykesko/examples/urdf/: README.md  _urdf.py  crane_x7.urdf  urdf.py
pykesko/messages/kesko/placeholder_box/: Clear.py  SpawnPlaceholderBox.py  SpawnSdfModel.py  Transform.py  Vec3.py
pykesko/messages/kesko/sdf_model_loader/: SpawnSdfModel.py  Transform.py  Vec3.py
pykesko/messages/kesko/urdf/: PackageMap.py  SpawnUrdf.py  Vec3.py
pykesko/pykesko/: __init__.py  color.py  config.py  kesko.py  utils.py
pykesko/pykesko/backend/: backend.py  bindings.py  renet.py  tcp.py
pykesko/pykesko/envs/: __init__.py  spider.py
pykesko/pykesko/protocol/: commands.py  communicator.py  response.py
pykesko/src/: lib.rs
python/: .flake8  Cargo.toml  pg.py  pynora.py  test.py
src/: camera.rs  lib.rs  main.rs  models.rs
(+126 files in other folders)
