[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "crates/kesko_core",
    "crates/kesko_physics",
    "crates/kesko_raycast",
    "crates/kesko_object_interaction",
    "crates/kesko_models",
    "crates/kesko_plugins",
    "crates/kesko_ui",
    "crates/kesko_diagnostic",
    "crates/kesko_tcp",
]

[package]
name = "kesko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kesko"
src = "src/main.rs"

[[bin]]
name = "kesko_tcp"

[dependencies]
bevy = "0.8.1"
kesko_physics = { version = "0.1.0", path = "crates/kesko_physics" }
kesko_core = { version = "0.1.0", path = "crates/kesko_core" }
kesko_object_interaction = { version = "0.1.0", path = "crates/kesko_object_interaction"}
kesko_raycast = { version = "0.1.0", path = "crates/kesko_raycast"}
kesko_models = { version = "0.1.0", path = "crates/kesko_models"}
kesko_plugins = { version = "0.1.0", path="crates/kesko_plugins"}
kesko_diagnostic = { version = "0.1.0", path="crates/kesko_diagnostic"}
kesko_tcp = { version = "0.1.0", path = "crates/kesko_tcp"}
