[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "crates/kesko_core",
    "crates/kesko_physics",
    "crates/kesko_raycast",
    "crates/kesko_object_interaction",
    "crates/kesko_models",
    "crates/kesko_plugins",
    "crates/kesko_ui",
    "crates/kesko_diagnostic",
    "crates/kesko_tcp",
]

[package]
name = "kesko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kesko"
src = "src/main.rs"

[[bin]]
name = "kesko_tcp"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
kesko_physics = { version = "0.1.0", path = "crates/kesko_physics" }
kesko_core = { version = "0.1.0", path = "crates/kesko_core" }
kesko_object_interaction = { version = "0.1.0", path = "crates/kesko_object_interaction"}
kesko_raycast = { version = "0.1.0", path = "crates/kesko_raycast"}
kesko_models = { version = "0.1.0", path = "crates/kesko_models"}
kesko_plugins = { version = "0.1.0", path="crates/kesko_plugins"}
kesko_diagnostic = { version = "0.1.0", path="crates/kesko_diagnostic"}
kesko_tcp = { version = "0.1.0", path = "crates/kesko_tcp"}
