[workspace]
resolver = "2" # Important! wgpu/Bevy needs this when using workspaces
members = [
    "crates/kesko_core",
    "crates/kesko_physics",
    "crates/kesko_raycast",
    "crates/kesko_object_interaction",
    "crates/kesko_models",
    "crates/kesko_plugins",
    "crates/kesko_ui",
    "crates/kesko_diagnostic",
    "crates/kesko_tcp"
]

[package]
name = "kesko"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "kesko_main"
path = "src/main.rs"

[lib]
name = "kesko"

[[bin]]
name = "kesko_tcp"

[[bin]]
name = "kesko_tcp_headless"

[[bin]]
name = "kesko_demo"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[workspace.dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }

pyo3 = { version = "0.17.2", features = ["extension-module"] }

kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
kesko_core = { path = "crates/kesko_core" }
kesko_object_interaction = { path = "crates/kesko_object_interaction" }
kesko_raycast = { path = "crates/kesko_raycast" }
kesko_models = { path = "crates/kesko_models" }
kesko_plugins = { path="crates/kesko_plugins" }
kesko_diagnostic = { path="crates/kesko_diagnostic" }
kesko_tcp = { path = "crates/kesko_tcp" }
