[workspace]
resolver = "2" # Important! wgpu/Bevy needs this when using workspaces
members = [
    "crates/kesko_core",
    "crates/kesko_physics",
    "crates/kesko_raycast",
    "crates/kesko_object_interaction",
    "crates/kesko_models",
    "crates/kesko_plugins",
    "crates/kesko_ui",
    "crates/kesko_diagnostic",
    "crates/kesko_tcp",
    "crates/kesko_urdf",
    "crates/placeholder_box",
    "crates/renet_transport",
    "crates/sdf_model_loader" 
]

[package]
name = "kesko"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "kesko_main"
path = "src/main.rs"

[lib]
name = "kesko"

[[bin]]
name = "kesko_tcp"

[[bin]]
name = "kesko_tcp_headless"

[[bin]]
name = "kesko_demo"

[[bin]]
name = "empty_tcp"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[workspace.dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline", "bevy_gltf"] }

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline", "bevy_gltf"] }

kesko_types = { path = "crates/kesko_types"}
kesko_core = { path = "crates/kesko_core" }
kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
kesko_object_interaction = { path = "crates/kesko_object_interaction" }
kesko_raycast = { path = "crates/kesko_raycast" }
kesko_models = { path = "crates/kesko_models" }
kesko_plugins = { path="crates/kesko_plugins" }
kesko_diagnostic = { path="crates/kesko_diagnostic" }
kesko_tcp = { path = "crates/kesko_tcp" }
kesko_urdf = { path = "crates/kesko_urdf" }
placeholder_box = { path = "crates/placeholder_box" }
renet_transport = { path = "crates/renet_transport" }
sdf_model_loader = { path = "crates/sdf_model_loader" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }