[package]
name = "pykesko"
version = "0.0.4"
edition = "2021"

[lib]
name = "pykesko"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
kesko = { path = "../kesko"}
kesko_urdf = { path = "../kesko/crates/kesko_urdf" }
renet_transport = { path = "../kesko/crates/renet_transport" }
placeholder_box = { path = "../kesko/crates/placeholder_box" }
phf = { version = "0.11.1", features = ["macros"] }
pyo3 = { version = "0.18.3", features = ["extension-module", "hashbrown"] }
serde = { version = "1.0.137" }
serde_json = "1.0.81"

[build-dependencies]
flatc-rust = "0.2.0"