[package]
name = "pykesko"
version = "0.0.4"
edition = "2021"

[lib]
name = "pykesko"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.11.0"}
kesko = { path = "../kesko"}
phf = { version = "0.11.1", features = ["macros"] }
pyo3 = { version = "0.18.3", features = ["extension-module"] }
serde = { version = "1.0.137" }
serde_json = "1.0.81"
