[package]
name = "kesko_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_traitobject = "0.2.7"
kesko_physics = { version = "0.1.0", path = "../kesko_physics" }
kesko_object_interaction = { path = "../kesko_object_interaction"}
kesko_raycast = { path = "../kesko_raycast" }
kesko_event = { path = "../kesko_event" }
