[package]
name = "kesko_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.1"
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main"}
rapier3d = "0.15.0"
nalgebra = "0.31.0"
fnv = "1.0.7"
crossbeam = "0.8.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_traitobject = "0.2.7"

[profile.dev.package.rapier3d]
opt-level = 3
