[package]
name = "kesko_plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.1"
kesko_core = { version = "0.1.0", path = "../kesko_core" }
kesko_physics = { path = "../kesko_physics" }
kesko_object_interaction = { path = "../kesko_object_interaction"}
kesko_ui = { path = "../kesko_ui"}
kesko_models = { path = "../kesko_models" }
