[package]
name = "kesko_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "pykesko"

[dependencies]
bevy = "0.8.1"
kesko_models = { path = "../kesko_models" }
kesko_diagnostic = { path = "../kesko_diagnostic" }
kesko_plugins = { path = "../kesko_plugins" }
kesko_physics = { path = "../kesko_physics" }
kesko_core = { path = "../kesko_core" }
pyo3 = { version = "0.17.2", features = ["extension-module"] }
serde = { version = "1.0.137" }
serde_json = "1.0.81"
