[package]
name = "kesko_physics"
version = "0.0.4"
edition = "2021"

[features]
f64 = ["dep:rapier3d-f64"]
f32 = ["dep:rapier3d"]

[dependencies]
bevy = { workspace = true }
rapier3d-f64 = { git = "https://github.com/wynss/rapier.git", branch = "master", optional = true, features = ["serde-serialize"]}
rapier3d = { git = "https://github.com/wynss/rapier.git", branch = "master", optional = true, features = ["serde-serialize"] }
nalgebra = "0.32.2"
fnv = "1.0.7"
crossbeam = "0.8.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

kesko_types = { path = "../kesko_types" }
