[package]
name = "kesko_plugins"
version = "0.0.4"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_atmosphere = { version="0.6.0" }

kesko_core = { path = "../kesko_core" }
kesko_physics = { path = "../kesko_physics" }
kesko_object_interaction = { path = "../kesko_object_interaction"}
kesko_ui = { path = "../kesko_ui"}
kesko_models = { path = "../kesko_models" }
