[package]
name = "kesko_tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
serde = "1.0.137"
serde_json = "1.0.81"
serde_traitobject = "0.2.7"
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main"}
kesko_core = { version = "0.1.0", path = "../kesko_core" }
kesko_physics = { path = "../kesko_physics" }
kesko_models = { path = "../kesko_models" }
