[package]
name = "kesko_ui"
version = "0.0.4"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = "0.20.3"

kesko_core = { path = "../kesko_core" }
kesko_models = { path = "../kesko_models" }
kesko_object_interaction = { path = "../kesko_object_interaction"}
kesko_physics = { path = "../kesko_physics" }