[package]
name = "kesko_urdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"]}
quick-xml = { version = "0.28.2", features = ["serialize",  "overlapped-lists"]}

