[package]
name = "kesko_urdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
serde = "1.0.137"
serde_json = "1.0.81"
bevy_stl = "0.8.0"
urdf-rs = "0.7.2"
k = "0.30"
flatbuffers = "23.5.26"

kesko_physics = { path = "../kesko_physics" }
kesko_object_interaction = { path = "../kesko_object_interaction"}
kesko_raycast = { path = "../kesko_raycast"}
kesko_core = { path = "../kesko_core"}
kesko_models = { path = "../kesko_models"}
anyhow = "1.0.71"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }


[build-dependencies]
flatc-rust = "0.2.0"
