[package]
name = "renet_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_renet = "0.0.8"
renet = { version = "0.0.12"}
flatbuffers = "23.5.26"

kesko_core = { path = "../kesko_core"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }